test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_max.rs
use clapi::macros::*;

#[command]
#[option(x, max="xyz")]
fn app(x: Vec<i64>){}

fn main(){}