test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_max.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_max.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `max` must be an integer literal
